--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "root/html",
   "autoload": {
     "psr-4": {
-      "Core\\": "core/"
+      "Core\\": "core/",
+      "Services\\": "services/"
     }
   },
   "require": {
