--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 RewriteBase /
 
 RewriteCond %{REQUEST_URI} !^/public
-RewriteRule ^(.*)$ /public/$1 [NC,L]
+RewriteRule ^(.*)$ /public/$1 [QSA,NC,L]
