--- a/docker-compose/tpi/docker-compose.yml
+++ b/docker-compose/tpi/docker-compose.yml
@@ -15,12 +15,15 @@ services:
   mysql:
     container_name: tpi-mysql
     image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
     ports:
       - "3306:3306"
     environment:
       MYSQL_DATABASE: tpi
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - ./dump:/docker-entrypoint-initdb.d
     networks:
       - default
 
@@ -35,6 +38,3 @@ services:
       PMA_USER: root
       PMA_PASSWORD: root
       PMA_HOST: mysql
-#    it can be linked to the mysql service by PMA_HOST or links
-#    links:
-#      - mysql:db
