--- a/docker-compose/tpi/docker-compose.yml
+++ b/docker-compose/tpi/docker-compose.yml
@@ -9,6 +9,13 @@ services:
       - ../../:/var/www/html/
     links:
       - mysql
+    command: >
+      sh -c "composer install &&
+             npm install &&
+             composer dump-autoload -o &&
+             npm run tsc &&
+             service apache2 restart
+             tail -f /dev/null"
     networks:
       - default
 
