--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
+  },
+  "devDependencies": {
+    "@types/node": "^13.1.8"
   }
 }
