--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,9 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "sourceMap": true,
     "target": "esnext",
-    "strictPropertyInitialization": false
+    "removeComments": true
   },
-  "include": [
-    "./src/**/*"
-  ],
   "exclude": [
     "./node_modules",
     "**/*.spec.ts",
