--- a/docker-compose/tpi/docker-compose.yml
+++ b/docker-compose/tpi/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   mysql:
     container_name: tpi-mysql
-    image: mysql
+    image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
